# OpenKDS

./: .env.example  .gitignore  Cargo.toml  README.md  index.js  package.json
modules/classes/: Item.js  Order.js  Station.js  StationType.js  station,js
modules/utils/: db.js  log.js
routers/: client.js  master.js  master_api.js
src/: main.rs
src/client/: mod.rs
src/db/: mod.rs
src/items/: mod.rs
src/master/: mod.rs
src/orders/: mod.rs
src/stations/: mod.rs
src/stationtypes/: mod.rs
src/web/: main.hbs
views/client/: index.ejs
views/master/: dashboard.ejs  items.ejs  login.ejs  setup.ejs  stations.ejs  stationtypes.ejs
views/master/edit/: editstationtype.ejs  item.ejs  station.ejs  stationtype.ejs
views/master/view/: items.ejs  orders.ejs  stations.ejs  stationtypes.ejs
views/partials/: orders.ejs
